@@ -1,7 +1,7 @@
-TIME: -  EV: 40000001 VAL: 1 [0x1] 
-TIME: -  EV: 40000018 VAL: 1 [0x1] 
-TIME: -  EV: 40000002 VAL: 1 [0x1] 
-TIME: -  EV: 40000002 VAL: 0 [0x0] 
-TIME: -  EV: 40000003 VAL: 1 [0x1] 
-TIME: -  EV: 40000003 VAL: 0 [0x0] 
-TIME: -  EV: 40000001 VAL: 0 [0x0] 
+TIME: - EV: 40000001 VAL: 1 [0x1] 
+TIME: - EV: 40000018 VAL: 1 [0x1] 
+TIME: - EV: 40000002 VAL: 1 [0x1] 
+TIME: - EV: 40000002 VAL: 0 [0x0] 
+TIME: - EV: 40000003 VAL: 1 [0x1] 
+TIME: - EV: 40000003 VAL: 0 [0x0] 
+TIME: - EV: 40000001 VAL: 0 [0x0] 
