@@ -14,11 +14,11 @@ CheckEntryInPCF ${TRACE}.pcf "pi_kernel"
 CheckEntryInPCF ${TRACE}.pcf "sleep_kernel"
 CheckEntryInPCF ${TRACE}.pcf "my_function"
 CheckEntryInPCF ${TRACE}.pcf "fake_kernel"
-CheckEntryInPCF ${TRACE}.pcf "37 (ompss-codelocation.c"
-CheckEntryInPCF ${TRACE}.pcf "46 (ompss-codelocation.c"
+CheckEntryInPCF ${TRACE}.pcf "32 (ompss-codelocation.c"
+CheckEntryInPCF ${TRACE}.pcf "41 (ompss-codelocation.c"
 CheckEntryInPCF ${TRACE}.pcf "69 (ompss-codelocation.c"
-CheckEntryInPCF ${TRACE}.pcf "74 (ompss-codelocation.c"
-CheckEntryInPCF ${TRACE}.pcf "91 (ompss-codelocation.c"
+CheckEntryInPCF ${TRACE}.pcf "69 (ompss-codelocation.c"
+CheckEntryInPCF ${TRACE}.pcf "86 (ompss-codelocation.c"
 
 NumberEntriesInPRV ${TRACE}.prv 2000 3
 if [[ "${?}" -ne 1 ]] ; then
